examples/test/testpolicy15751.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15751
  namespace: namespace77
spec:
  podSelector:
    matchLabels:
      key46: value22
      key25: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value45
          key28: value30
          key18: value45
      podSelector:
        matchLabels:
          key24: value48
          key29: value45
          key10: value15
